# telegram-trade-bot

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
bot/: Dockerfile  config.py  keyboards.py  main.py
bot/handlers/: common.py  order.py  order_update.py  wallet.py
bot/modules/: trade.py
service/: Dockerfile
service/app/: config.py  database.py  main.py  models.py  scheduler.py  schemas.py  security.py  ton_wallet.py
service/app/routes/: order.py  wallet.py
