[tool.poetry]
name = "telegram-trade-bot"
version = "0.1.0"
description = "Telegram Bot + FastAPI service in one repo"
authors = ["Fedor Balabanov <fedor_balabanov13@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

pydantic-settings = "^2.7.1"
httpx = "^0.28.1"

[tool.poetry.group.bot.dependencies]
python-telegram-bot = "^21.10"

[tool.poetry.group.service.dependencies]
fastapi = "^0.115.8"
sqlalchemy = "^2.0.38"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
tonutils = "^0.2.5"
cryptography = "^44.0.1"
mnemonic = "^0.21"
apscheduler = "^3.11.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"


[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
